--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,27 @@
 !/.zshrc
 !/.zsh/
 /.vim/.netrwhist
+.idea
+bin/behat
+bin/phpunit
+build.properties
+build/*
+.buildpath
+.project
+.settings/
+*.swp
+vendor/*
+composer.phar
+data/templates/*
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
